# DMD_using_Cpp

./: CMakeLists.txt  README.md  buil_project.ps1  dmd.cpp  image_to_bin.cpp  initializeDMD.cpp  loadPattern.cpp  main.cpp  splitPattern.cpp  win32Toolchain.cmake
include/: headers.h
